--- a/backend-part/package.json
+++ b/backend-part/package.json
@@ -20,6 +20,7 @@
     "koa": "^2.5.1",
     "koa-http-request": "^2.2.1",
     "koa-pino-logger": "^2.1.3",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.5"
   }
 }
